// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav component should render a project as the active item 1`] = `
<nav
  class="Nav"
>
  <h2
    class="Nav-heading"
  >
    Blog
  </h2>
  <p
    class="Nav-linklog"
    translate="no"
  >
    <a>
      Linklog
    </a>
  </p>
  <h2
    class="Nav-heading"
  >
    Work
  </h2>
  <ul
    class="Nav-list"
  >
    <li
      translate="no"
    >
      <a
        aria-current="page"
      >
        Thomson Reuters
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Compass Group
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Bilbary
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Genes Reunited
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        The National Lottery
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Age Concern
      </a>
    </li>
  </ul>
  <p>
    © 2025
  </p>
</nav>
`;

exports[`Nav component should render correctly 1`] = `
<nav
  class="Nav"
>
  <h2
    class="Nav-heading"
  >
    Blog
  </h2>
  <p
    class="Nav-linklog"
    translate="no"
  >
    <a>
      Linklog
    </a>
  </p>
  <h2
    class="Nav-heading"
  >
    Work
  </h2>
  <ul
    class="Nav-list"
  >
    <li
      translate="no"
    >
      <a>
        Thomson Reuters
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Compass Group
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Bilbary
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Genes Reunited
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        The National Lottery
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Age Concern
      </a>
    </li>
  </ul>
  <p>
    © 2025
  </p>
</nav>
`;

exports[`Nav component should render linklog as the active item 1`] = `
<nav
  class="Nav"
>
  <h2
    class="Nav-heading"
  >
    Blog
  </h2>
  <p
    class="Nav-linklog"
    translate="no"
  >
    <a
      aria-current="page"
    >
      Linklog
    </a>
  </p>
  <h2
    class="Nav-heading"
  >
    Work
  </h2>
  <ul
    class="Nav-list"
  >
    <li
      translate="no"
    >
      <a>
        Thomson Reuters
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Compass Group
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Bilbary
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Genes Reunited
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        The National Lottery
      </a>
    </li>
    <li
      translate="no"
    >
      <a>
        Age Concern
      </a>
    </li>
  </ul>
  <p>
    © 2025
  </p>
</nav>
`;
